Make the innerHTML getter serialize all HTML-like content (text, etc) as HTML. Bug 340800, r+sr=peterv